--- a/src/app/home/birthday-table/birthday-table.component.html
+++ b/src/app/home/birthday-table/birthday-table.component.html
@@ -1,1 +1,20 @@
-<p>birthday-table works!</p>
+<nz-table #basicTable [nzData]="personList">
+    <thead>
+      <tr>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>Phone</th>
+        <th>City</th>
+        <th>Birth date</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of basicTable.data">
+        <td>{{data.firstName}}</td>
+        <td>{{data.lastName}}</td>
+        <td>{{data.phoneNumber}}</td>
+        <td>{{data.city}}</td>
+        <td>{{data.birthDate| date:'longDate'}}</td>
+      </tr>
+    </tbody>
+  </nz-table>
