--- a/src/app/home/birthday-table/birthday-table.component.html
+++ b/src/app/home/birthday-table/birthday-table.component.html
@@ -14,82 +14,35 @@
   <button (click)="sortByCityAscending()">Sort By City Ascending</button>
   <button (click)="sortByCityDescending()">Sort By City Descending</button>
 </div>
-<nz-table #basicTable [nzData]="listOfDisplayPerson">
-    <thead>
-      <tr>
-        <th nzCustomFilter>
-          First name
-          <nz-filter-trigger [(nzVisible)]="isFirstNameFilterVisible" [nzActive]="firstNameSearchValue.length > 0" [nzDropdownMenu]="menuFirstName">
-            <span nz-icon nzType="search"></span>
-          </nz-filter-trigger>
-        </th>
-        <th nzCustomFilter>
-          Last name
-          <nz-filter-trigger [(nzVisible)]="isLastNameFilterVisible" [nzActive]="lastNameSearchValue.length > 0" [nzDropdownMenu]="menuLastName">
-            <span nz-icon nzType="search"></span>
-          </nz-filter-trigger>
-        </th>
-        <th>Phone</th>
-        <th nzCustomFilter>
-          City
-          <nz-filter-trigger [(nzVisible)]="isCityFilterVisible" [nzActive]="citySearchValue.length > 0" [nzDropdownMenu]="menuCity">
-            <span nz-icon nzType="search"></span>
-          </nz-filter-trigger>
-        </th>
-        <th>Birth date</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let data of basicTable.data">
-        <td>{{data.firstName}}</td>
-        <td>{{data.lastName}}</td>
-        <td>{{data.phoneNumber}}</td>
-        <td>{{data.city}}</td>
-        <td>{{data.birthDate| date:'longDate'}}</td>
-      </tr>
-    </tbody>
-    <nz-dropdown-menu #menuFirstName="nzDropdownMenu">
-      <div class="ant-table-filter-dropdown">
-        <div class="search-box">
-          <input type="text" nz-input placeholder="Search by first name..." [(ngModel)]="firstNameSearchValue" />
-          <button nz-button nzSize="small" nzType="primary" (click)="searchByFirstName()" class="search-button">Search</button>
-          <button nz-button nzSize="small" (click)="resetAll()">Reset all</button>
-        </div>
-      </div>
-    </nz-dropdown-menu>
-    <nz-dropdown-menu #menuLastName="nzDropdownMenu">
-      <div class="ant-table-filter-dropdown">
-        <div class="search-box">
-          <input type="text" nz-input placeholder="Search by last name..." [(ngModel)]="lastNameSearchValue" />
-          <button nz-button nzSize="small" nzType="primary" (click)="searchByLastName()" class="search-button">Search</button>
-          <button nz-button nzSize="small" (click)="resetAll()">Reset all</button>
-        </div>
-      </div>
-    </nz-dropdown-menu>
-    <nz-dropdown-menu #menuCity="nzDropdownMenu">
-      <div class="ant-table-filter-dropdown">
-        <div class="search-box">
-          <input type="text" nz-input placeholder="Search by city..." [(ngModel)]="citySearchValue" />
-          <button nz-button nzSize="small" nzType="primary" (click)="searchByCity()" class="search-button">Search</button>
-          <button nz-button nzSize="small" (click)="resetAll()">Reset all</button>
-        </div>
-      </div>
-    </nz-dropdown-menu>
-  </nz-table>
 <div class="flex-button">
   <button nz-button nzType="primary" style="margin: 10px" routerLink="/add">
     Add a person
   </button>
 </div>
-<nz-table #basicTable [nzData]="personList">
+<nz-table #basicTable [nzData]="listOfDisplayPerson">
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th nzCustomFilter>
+        First name
+        <nz-filter-trigger [(nzVisible)]="isFirstNameFilterVisible" [nzActive]="firstNameSearchValue.length > 0" [nzDropdownMenu]="menuFirstName">
+          <span nz-icon nzType="search"></span>
+        </nz-filter-trigger>
+      </th>
+      <th nzCustomFilter>
+        Last name
+        <nz-filter-trigger [(nzVisible)]="isLastNameFilterVisible" [nzActive]="lastNameSearchValue.length > 0" [nzDropdownMenu]="menuLastName">
+          <span nz-icon nzType="search"></span>
+        </nz-filter-trigger>
+      </th>
       <th>Phone</th>
-      <th>City</th>
+      <th nzCustomFilter>
+        City
+        <nz-filter-trigger [(nzVisible)]="isCityFilterVisible" [nzActive]="citySearchValue.length > 0" [nzDropdownMenu]="menuCity">
+          <span nz-icon nzType="search"></span>
+        </nz-filter-trigger>
+      </th>
       <th>Birth date</th>
-      <th>Action</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -154,4 +107,31 @@
       </ng-template>
     </tr>
   </tbody>
+  <nz-dropdown-menu #menuFirstName="nzDropdownMenu">
+    <div class="ant-table-filter-dropdown">
+      <div class="search-box">
+        <input type="text" nz-input placeholder="Search by first name..." [(ngModel)]="firstNameSearchValue" />
+        <button nz-button nzSize="small" nzType="primary" (click)="searchByFirstName()" class="search-button">Search</button>
+        <button nz-button nzSize="small" (click)="resetAll()">Reset all</button>
+      </div>
+    </div>
+  </nz-dropdown-menu>
+  <nz-dropdown-menu #menuLastName="nzDropdownMenu">
+    <div class="ant-table-filter-dropdown">
+      <div class="search-box">
+        <input type="text" nz-input placeholder="Search by last name..." [(ngModel)]="lastNameSearchValue" />
+        <button nz-button nzSize="small" nzType="primary" (click)="searchByLastName()" class="search-button">Search</button>
+        <button nz-button nzSize="small" (click)="resetAll()">Reset all</button>
+      </div>
+    </div>
+  </nz-dropdown-menu>
+  <nz-dropdown-menu #menuCity="nzDropdownMenu">
+    <div class="ant-table-filter-dropdown">
+      <div class="search-box">
+        <input type="text" nz-input placeholder="Search by city..." [(ngModel)]="citySearchValue" />
+        <button nz-button nzSize="small" nzType="primary" (click)="searchByCity()" class="search-button">Search</button>
+        <button nz-button nzSize="small" (click)="resetAll()">Reset all</button>
+      </div>
+    </div>
+  </nz-dropdown-menu>
 </nz-table>
