Fixed 'Birthday' formatting and now using LoDash cloneDeep function.

--- a/src/app/home/birthday-table/birthday-table.component.html
+++ b/src/app/home/birthday-table/birthday-table.component.html
@@ -15,7 +15,7 @@
   <button (click)="sortByCityDescending()">Sort By City Descending</button>
 </div>
 <div>
-  <button (click)="sortByBirthDayAscending()">Sort By Birth day Ascending</button>
+  <button (click)="sortByBirthdayAscending()">Sort By Birthday Ascending</button>
 </div>
 <div class="flex-button">
   <button nz-button nzType="primary" style="margin: 10px" routerLink="/add">
@@ -138,4 +138,4 @@
     </div>
   </nz-dropdown-menu>
 </nz-table>
-<app-reminder-info [listOfBirthDays]="listOfDisplayPerson"></app-reminder-info>
+<app-reminder-info [listOfBirthdays]="listOfDisplayPerson"></app-reminder-info>
