--- a/src/app/reminder/reminder-info/reminder-info.component.html
+++ b/src/app/reminder/reminder-info/reminder-info.component.html
@@ -1,4 +1,4 @@
-<button (click)="loadNextBirthDay()" [disabled]="isButtonEnabled">Show Next Birth Day!</button>
+<button (click)="loadNextBirthday()" [disabled]="isButtonEnabled">Show Next Birth Day!</button>
 <div [hidden]="seeResult">
   <p>Your next upcoming birthday is: </p>
   <div class="card">
