--- a/src/app/home/birthday-table/birthday-table.component.html
+++ b/src/app/home/birthday-table/birthday-table.component.html
@@ -1,22 +1,3 @@
-<div>
-  <button (click)="sortByFirstNameAscending()">Sort By First Name Ascending</button>
-  <button (click)="sortByFirstNameDescending()">Sort By First Name Descending</button>
-</div>
-<div>
-  <button (click)="sortByLastNameAscending()">Sort By Last Name Ascending</button>
-  <button (click)="sortByLastNameDescending()">Sort By Last Name Descending</button>
-</div>
-<div>
-  <button (click)="sortByPhoneNumberAscending()">Sort By Phone Number Ascending</button>
-  <button (click)="sortByPhoneNumberDescending()">Sort By Phone Number Descending</button>
-</div>
-<div>
-  <button (click)="sortByCityAscending()">Sort By City Ascending</button>
-  <button (click)="sortByCityDescending()">Sort By City Descending</button>
-</div>
-<div>
-  <button (click)="sortByBirthdayAscending()">Sort By Birthday Ascending</button>
-</div>
 <div class="flex-button">
   <button nz-button nzType="primary" style="margin: 10px" routerLink="/add">
     Add a person
@@ -25,27 +6,13 @@
 <nz-table #basicTable [nzData]="listOfDisplayPerson">
   <thead>
     <tr>
-      <th nzCustomFilter>
-        First name
-        <nz-filter-trigger [(nzVisible)]="isFirstNameFilterVisible" [nzActive]="firstNameSearchValue.length > 0" [nzDropdownMenu]="menuFirstName">
-          <span nz-icon nzType="search"></span>
-        </nz-filter-trigger>
+      <th
+        *ngFor="let column of listOfColumns"
+        [nzSortOrder]="column.sortOrder"
+        [nzSortFn]="column.sortFn"
+        [nzSortDirections]="column.sortDirections">
+        {{column.name}}
       </th>
-      <th nzCustomFilter>
-        Last name
-        <nz-filter-trigger [(nzVisible)]="isLastNameFilterVisible" [nzActive]="lastNameSearchValue.length > 0" [nzDropdownMenu]="menuLastName">
-          <span nz-icon nzType="search"></span>
-        </nz-filter-trigger>
-      </th>
-      <th>Phone</th>
-      <th nzCustomFilter>
-        City
-        <nz-filter-trigger [(nzVisible)]="isCityFilterVisible" [nzActive]="citySearchValue.length > 0" [nzDropdownMenu]="menuCity">
-          <span nz-icon nzType="search"></span>
-        </nz-filter-trigger>
-      </th>
-      <th>Birth date</th>
-      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
