--- a/src/app/home/birthday-table/birthday-table.component.html
+++ b/src/app/home/birthday-table/birthday-table.component.html
@@ -4,9 +4,9 @@
   </button>
 </div>
 <div>
-  <input type="text" placeholder="Search..." [(ngModel)]="searchText">
+  <input type="text" placeholder="Search..." [(ngModel)]="searchValue" (input)="onInputFilterList()">
 </div>
-<nz-table #basicTable [nzData]="listOfDisplayPerson">
+<nz-table #basicTable [nzData]="displayPersonList">
   <thead>
     <tr>
       <th
@@ -19,7 +19,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let data of basicTable.data | search: searchText">
+    <tr *ngFor="let data of basicTable.data">
       <ng-container *ngIf="!editCache[data.id].edit; else editTemplate">
         <td>{{ data.firstName }}</td>
         <td>{{ data.lastName }}</td>
@@ -81,4 +81,4 @@
     </tr>
   </tbody>
 </nz-table>
-<app-reminder-info [listOfBirthdays]="listOfDisplayPerson"></app-reminder-info>
+<app-reminder-info [listOfBirthdays]="displayPersonList"></app-reminder-info>
