Implemented modal for the wish list

--- a/src/app/home/birthday-table/birthday-table.component.html
+++ b/src/app/home/birthday-table/birthday-table.component.html
@@ -39,6 +39,9 @@
           <a (click)="deletePerson(data.id)"
             ><span nz-icon nzType="delete" nzTheme="outline"></span
           ></a>
+          <a (click)="showModal(data.id)"
+            ><span nz-icon nzType="up" nzTheme="outline"></span>
+          </a>
         </td>
       </ng-container>
       <ng-template #editTemplate>
@@ -90,3 +93,18 @@
   </tbody>
 </nz-table>
 <app-reminder-info [listOfBirthdays]="displayPersonList"></app-reminder-info>
+
+<nz-modal [(nzVisible)]="modalVisibility" (nzOnCancel)="handleClose()">
+  <div *nzModalContent>
+    <h1>{{showedPerson.firstName}}'s wish list!</h1>
+
+    <p *ngFor="let wish of showedPerson.wishList">
+      {{wish}}
+    </p>
+  </div>
+  <div *nzModalFooter>
+    <button nz-button nzType="primary" (click)="handleOk()">
+      Cool!
+    </button>
+  </div>
+</nz-modal>
