--- a/src/app/home/birthday-table/birthday-table.component.html
+++ b/src/app/home/birthday-table/birthday-table.component.html
@@ -1,9 +1,13 @@
-<div class="flex-button">
+<div class="logo-container">
+  <img src="assets/KeepLogo.png" alt="Logo" />
+</div>
+<div class="functions-container">
   <button nz-button nzType="primary" style="margin: 10px" routerLink="/add">
     Add a person
   </button>
-</div>
-<div>
+
+  <app-reminder-info [listOfBirthdays]="displayPersonList"></app-reminder-info>
+
   <input
     type="text"
     placeholder="Search..."
@@ -92,19 +96,16 @@
     </tr>
   </tbody>
 </nz-table>
-<app-reminder-info [listOfBirthdays]="displayPersonList"></app-reminder-info>
 
 <nz-modal [(nzVisible)]="modalVisibility" (nzOnCancel)="handleClose()">
   <div *nzModalContent>
-    <h1>{{showedPerson.firstName}}'s wish list!</h1>
+    <h1>{{ showedPerson.firstName }}'s wish list!</h1>
 
     <p *ngFor="let wish of showedPerson.wishList">
-      {{wish}}
+      {{ wish }}
     </p>
   </div>
   <div *nzModalFooter>
-    <button nz-button nzType="primary" (click)="handleOk()">
-      Cool!
-    </button>
+    <button nz-button nzType="primary" (click)="handleOk()">Cool!</button>
   </div>
 </nz-modal>
