--- a/src/app/home/birthday-table/birthday-table.component.scss
+++ b/src/app/home/birthday-table/birthday-table.component.scss
@@ -1,8 +1,3 @@
-[nz-button] {
-  margin-right: 8px;
-  margin-bottom: 12px;
-}
-
 nz-button-group [nz-button] {
   margin-right: 0;
 }
@@ -12,11 +7,14 @@ nz-button-group [nz-button] {
   justify-content: space-between;
   button {
     width: 160px;
+    margin: 10px;
   }
-  input {
+  .search-container {
     width: 160px;
     height: 32px;
     margin: 10px;
+    input {
+    }
   }
 }
 
