--- a/src/app/reminder/reminder-info/reminder-info.component.html
+++ b/src/app/reminder/reminder-info/reminder-info.component.html
@@ -3,7 +3,7 @@
   nzType="primary"
   (click)="showModal()"
 >
-  Show Next Birth Day!
+  Show Next Birthday!
 </button>
 <nz-modal [(nzVisible)]="modalVisibility" (nzOnCancel)="handleClose()">
   <div *nzModalContent>
